# laba4

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: action.yml
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  example1
examples/: example1.cpp
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
include/: print.hpp
solver_lib/: CMakeLists.txt
